<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Detalles Cliente"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/labelNombreClientes"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombreClienteDetalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/labelApellidosClientes"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtClienteApellidosDetalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/labelDNIClientes"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/account">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField6"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/labelGeneroCliente">

                <AutoCompleteTextView
                    android:id="@+id/spnRegistrarGeneroClienteDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/clientes_items" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDniClienteDetalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/labelCorreoCliente"

            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCorreoClienteAgregarDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="clear_text"
            android:hint="@string/labelNumeroCliente"

            app:startIconDrawable="@drawable/account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNumeroCelularAgregarDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="clear_text"
            android:hint="@string/labelDireccionCliente"
            app:startIconDrawable="@drawable/account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDireccionClienteAgregarDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegistrarClienteModificar"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="Modificar"
                android:backgroundTint="@color/color3"
                app:icon="@drawable/plus_thick" />

            <Button
                android:id="@+id/btnClienteBorrarDetalle"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/material_dynamic_neutral30"
                android:text="Borrar"
                app:icon="@drawable/keyboard_return" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnRegresarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Regresar"
        tools:layout_editor_absoluteX="327dp"
        tools:layout_editor_absoluteY="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>